--- a/css/style.css
+++ b/css/style.css
@@ -63,52 +63,83 @@ header {
   margin: 52px 0 200px 0;
 }
 /* section */
-.section1{ 
+.section1 {
   width: 1440px;
   margin: 0 auto;
-  background-color: #C2F3EE;
+  background-color: #c2f3ee;
   padding: 80px 130px;
- 
 }
- 
-.section1_image{
+
+.section1_image {
   width: 500px;
   height: 560px;
   vertical-align: top;
   margin-right: 120px;
 }
-.section1_header{
+.section1_header {
   font-weight: 600;
   font-size: 32px;
   line-height: 48px;
   font-family: "Poppins", sans-serif;
   color: #272727;
- 
 }
-.article2{
+.article2 {
   display: inline-block;
   width: 460px;
   vertical-align: top;
-
 }
-.section1_p{
+.section1_p {
   font-weight: 400;
   font-size: 18px;
   line-height: 27px;
   font-family: "Poppins", sans-serif;
   color: #515151;
   margin: 27px 0 45px 0;
- 
- 
 }
-button{
-  background-color: #2A9D8F;
-  color: #FFFFFF;
+button {
+  background-color: #2a9d8f;
+  color: #ffffff;
   width: 113px;
   height: 46px;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   border: none;
+  font-family: 62.4px;
+}
+.section2 {
+  width: 1180px;
+  margin: 200px auto;
+}
+
+.section2_header {
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 62.4px;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  color: #4d4d4d;
+  margin-bottom: 54px;
+  
+}
+.card1 {
+  display: inline-block;
+  vertical-align: middle;
+  width: 580px;
+  margin-right: 15px;
+ 
+}
+.card2{  display: inline-block;
+  vertical-align: middle;
+  width: 580px;
+
+}
+
+.card_p {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+  color: #535353;
   font-family:"Poppins", sans-serif ;
+  margin-top: 32px;
 }
