--- a/css/style.css
+++ b/css/style.css
@@ -120,19 +120,17 @@ button {
   text-align: center;
   color: #4d4d4d;
   margin-bottom: 54px;
-  
 }
 .card1 {
   display: inline-block;
   vertical-align: middle;
   width: 580px;
   margin-right: 15px;
- 
 }
-.card2{  display: inline-block;
+.card2 {
+  display: inline-block;
   vertical-align: middle;
   width: 580px;
-
 }
 
 .card_p {
@@ -140,6 +138,44 @@ button {
   font-size: 24px;
   line-height: 36px;
   color: #535353;
-  font-family:"Poppins", sans-serif ;
+  font-family: "Poppins", sans-serif;
   margin-top: 32px;
+}
+/* footer */
+footer {
+  width: 1440px;
+  background-color: #2a9d8f;
+  padding: 90px 130px;
+  margin: 0 auto;
+}
+.footer_head {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  font-family: "Poppins", sans-serif;
+  margin-bottom: 21px;
+  color: #ffffff;
+}
+.footer_nav {
+  display: inline-block;
+  vertical-align: top;
+}
+.footer_logo {
+  margin-right: 934px;
+  vertical-align: top;
+}
+.footer_text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: #ffffff;
+}
+
+.footer_text_middle {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: #ffffff;
+  margin-top: 8px 0;
 }
